# xrpc

./: CMakeLists.txt  LICENSE  README.md
configs/: xrpc.conf
docs/: api.md  design.md  tutorial.md
examples/: CMakeLists.txt
examples/client/: user_client.cc
examples/server/: CMakeLists.txt  user_server.cc
protos/: CMakeLists.txt  xrpc.proto
protos/example/: user_service.proto
scripts/: generate_protos.sh  run_tests.sh
src/: CMakeLists.txt
src/core/channel/: xrpc_channel.cc  xrpc_channel.h
src/core/codec/: xrpc_codec.cc  xrpc_codec.h
src/core/common/: xrpc_common.h  xrpc_config.cc  xrpc_config.h  xrpc_logger.cc  xrpc_logger.h
src/core/controller/: xrpc_controller.cc  xrpc_controller.h
src/core/server/: xrpc_server.cc  xrpc_server.h
src/registry/: zookeeper_client.cc  zookeeper_client.h
src/transport/: asio_transport.cc  asio_transport.h  muduo_transport.cc  muduo_transport.h
tests/: CMakeLists.txt  async_channel_test.cc  cancel_test.cc  channel_test.cc  config_codec_test.cc  controller_test.cc  main.cc  registry_test.cc  server_test.cc  user_service_test.cc
